--- a/2024.md
+++ b/2024.md
@@ -4,15 +4,13 @@
  <img src="logo.png?raw=true" alt="90DaysOfDevOps Logo" width="50%" height="50%" />
 </p>
 
-Welcome to 2024, we have some exciting stuff going on here and we want to use the 2024 edition to celebrate the community. 
+ยินดีต้อนรับสู่ปี 2025 เรามีเรื่องน่าตื่นเต้นเกิดขึ้นที่นี่ และเราต้องการใช้รุ่นปี 2024 เพื่อเฉลิมฉลองให้กับชุมชน
 
-For those new around here this repository was started in 2022 with my learning journey into DevOps, getting a better foundational knowledge of "DevOps". In 2023 we invited some friends to contribute on their subject to enable the community more learning content and resources. 
+เราเติบโตขึ้น, ทำให้ชุมชนมีส่วนร่วมมากขึ้นและ Explore Format ใหม่ ในแต่ละวัน เราจะมี Session Video จากสมาชิกของชุมชนที่แบ่งปันเรื่องราว สาธิต และหรือโครงการของพวกเขา
 
-In 2024 we are going big and getting more of the community involved and exploring a new format. For each day we will have a video session from a member of the community sharing their story, demos and or projects. 
+สิ่งสำคัญของ Repository นี้ คือความสามารถในการเข้าถึงเครื่องมือและ Hands-on Scenario ทั้งหมดนั้นสามารถเข้าถึงได้ Free สำหรับชุมชน นี่จะยังคงเป็นหลักการของชุมชนและเป็นแบบนี้ต่อไป
 
-A big thing about the repository has been the accessibility in regards that all tools and hands-on scenarios we have walked through are freely available to the community. This will continue to be the ethos of this community and event. 
-
-You will find all your 2024 sessions on the link below 
+คุณจะพบ Session ปี 2024 ทั้งหมดได้ที่ Link ด้านล่าง
 
 <p align="center">
 <a href="https://www.youtube.com/playlist?list=PLsKoqAvws1psCnkDaTPRHaqcTLSTPDFBR">
@@ -22,15 +20,17 @@ You will find all your 2024 sessions on the link below
 
 [![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/N4N33YRCS)
 
-If you have questions and want to get involved then join the discord and share your questions and stories with the community.
+[![buymeacoffee](https://github.com/user-attachments/assets/bf126679-92d4-4669-a92d-9a289bff85ea)](https://buymeacoffee.com/plawansai) แปล
+
+หากคุณมีคำถามและต้องการมีส่วนร่วม โปรดเข้าร่วม Discord ถามคำถามและแบ่งปันเรื่องราวของคุณกับชุมชน
 
 [![](https://dcbadge.vercel.app/api/server/vqwPrNQsyK)](https://discord.gg/vqwPrNQsyK)
 
-Or contact us via Twitter, my handle is [@MichaelCade1](https://twitter.com/MichaelCade1) you can find the authors for 2023 also on Twitter linked below.
+หรือติดต่อเราผ่านทาง Facebook, Page ของเราคือ [ThaiCPE](https://www.facebook.com/thaicpe)
 
 ## Agenda
 
-- [✔️][✔️] ♾️ 1 > [2024 - Community Edition - Introduction](2024/day01.md) - Michael Cade
+- [✔️] ♾️ 1 > [2024 - Community Edition - Introduction](2024/day01.md) - Michael Cade
 - [✔️][✔️] ♾️ 2 > [The Digital Factory](2024/day02.md) - Romano Roth
 - [✔️][✔️] ♾️ 3 > [High-performing engineering teams and the Holy Grail](2024/day03.md) - Jeremy Meiss
 - [✔️][✔️] ♾️ 4 > [Manage Kubernetes Add-Ons for Multiple Clusters Using Cluster Run-Time State](2024/day04.md) - Gianluca Mardente
